app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-list/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-list/src/patmat.cal:6:22: error: case may not be exhaustive.
It would fail on pattern: [_, _, _, _, _]
                case l of
                     ^